unpackaged/main/default/objects/n2de__cls_Auto_conversion_log__c/n2de__cls_Auto_conversion_log__c.object-meta.xml
<CustomObject>
    <description>Classifier Auto conversion log</description>
    <label>Classifier Auto conversion log</label>
    <nameField>
        <label>Classifier Auto conversion log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classifier Auto conversion logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>