unpackaged/main/default/objects/n2de__cls_Auto_conversion_log__c/fields/n2de__Auto_conversion_datetime__c.field-meta.xml
<CustomField>
    <fullName>n2de__Auto_conversion_datetime__c</fullName>
    <description>Date time at which the SObject was auto-converted</description>
    <label>Auto conversion datetime</label>
    <type>DateTime</type>
</CustomField>