unpackaged/main/default/objects/n2de__cls_Auto_conversion_log__c/fields/n2de__Auto_conversion_rule__c.field-meta.xml
<CustomField>
    <fullName>n2de__Auto_conversion_rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Auto conversion rule used</description>
    <label>Auto conversion rule</label>
    <referenceTo>n2de__cls_Auto_conversion_rule__c</referenceTo>
    <relationshipLabel>Classifier Auto conversion logs</relationshipLabel>
    <relationshipName>Classifier_Auto_conversion_logs</relationshipName>
    <type>Lookup</type>
</CustomField>