unpackaged/main/default/objects/n2de__cls_Auto_conversion_log__c/fields/n2de__Auto_conversion_rule_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Auto_conversion_rule_name__c</fullName>
    <description>Auto conversion rule name</description>
    <label>Auto conversion rule name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>