unpackaged/main/default/objects/n2de__cls_Auto_conversion_log__c/fields/n2de__De_duplication_datetime__c.field-meta.xml
<CustomField>
    <fullName>n2de__De_duplication_datetime__c</fullName>
    <description>Date time the SObject was de-duplicated</description>
    <label>De-duplication datetime</label>
    <type>DateTime</type>
</CustomField>