unpackaged/main/default/objects/n2de__cls_Auto_conversion_log__c/fields/n2de__Error_status_code__c.field-meta.xml
<CustomField>
    <fullName>n2de__Error_status_code__c</fullName>
    <description>Error status code</description>
    <label>Error status code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>