unpackaged/main/default/objects/n2de__cls_Auto_conversion_log__c/fields/n2de__In_error__c.field-meta.xml
<CustomField>
    <fullName>n2de__In_error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has an error occured during de-duplication or auto-conversion?</description>
    <label>In error</label>
    <type>Checkbox</type>
</CustomField>