unpackaged/main/default/objects/n2de__cls_Auto_conversion_log__c/fields/n2de__Is_auto_converted__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_auto_converted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the SObject been auto-converted?</description>
    <label>Is auto converted</label>
    <type>Checkbox</type>
</CustomField>