unpackaged/main/default/objects/n2de__cls_Auto_conversion_log__c/fields/n2de__Matched_account__c.field-meta.xml
<CustomField>
    <fullName>n2de__Matched_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Matched account</description>
    <label>Matched account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Classifier Auto conversion logs</relationshipLabel>
    <relationshipName>Classifier_Auto_conversion_logs</relationshipName>
    <type>Lookup</type>
</CustomField>