unpackaged/main/default/objects/n2de__cls_Auto_conversion_log__c/fields/n2de__Number_of_attempts__c.field-meta.xml
<CustomField>
    <fullName>n2de__Number_of_attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of attempts at either de-duplication or auto-conversion</description>
    <label>Number of attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>