unpackaged/main/default/objects/n2de__cls_Auto_conversion_log__c/fields/n2de__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>n2de__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity created during auto-conversion</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Classifier Auto conversion logs</relationshipLabel>
    <relationshipName>Classifier_Auto_conversion_logs</relationshipName>
    <type>Lookup</type>
</CustomField>