unpackaged/main/default/objects/n2de__cls_Auto_conversion_log__c/fields/n2de__Owner__c.field-meta.xml
<CustomField>
    <fullName>n2de__Owner__c</fullName>
    <description>Id of the User that any new Account, Contact or Opportunity objects  created during auto-conversion are assigned to</description>
    <label>Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>