unpackaged/main/default/objects/n2de__cls_Auto_conversion_log__c/fields/n2de__Record_id_index__c.field-meta.xml
<CustomField>
    <fullName>n2de__Record_id_index__c</fullName>
    <description>Id of the record being classified via auto-conversion</description>
    <label>Record id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>