unpackaged/main/default/objects/n2de__cls_Auto_conversion_log__c/fields/n2de__Record_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Record_name__c</fullName>
    <description>Name of the record being classified via auto-conversion</description>
    <label>Record name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>